@startuml

package main{
class Main{}
}

package Cursos{

class Matrícula{
- Estudiante estudiante
- Curso curso
- Docente docente
- nota:double
+ mostrarInformacion()
+ registrarEvaluacion()
+ mostrarDetalle()
+ inscribirEstudiante()
}

class Curso{
- nombreCurso:String
- paralelo:String
- duracionMeses:int
- precio:Double
+ mostrarResumen()
+ asignarDocente(String docente)
+ verificarDocenteAsignado()
+ registrarEstudiante()
}

class CursoRegular{
+mostrarResumen()
}

class CursoCertificado{
+calcularPrecioFinal()
+mostrarResumen()
+(sobrescrito)
}

class Estudiante{
- nombre:String
- edad:int
- cedula:String
}

class Docente{
- nombre:String
- edad:int
+ mostrarPerfil()
}


}
Matrícula -- Curso
Matrícula -- Estudiante
Matrícula -- Docente


Curso <-- CursoRegular
Curso <-- CursoCertificado

@enduml